Added exercise probability hack to BermudanSwaption pricing for 1-D Hull-White.
ONLY THE VISUAL STUDIO 14 PROJECTS HAVE BEEN ADJUSTED.

1.  Added AdditionalResultCalculator to permit interrupting
TreePricingEngines.  These interact with DiscreteAssets, as these block
natural extension of pricing functionality.
2.  Added TreeCumulativeProbabilityCalculator1D, extending
AdditinoalResultCalculator to allow probability cumulation within the
TreeSwaptionPricingEngine.   There is a complicated handshack involving
the SwaptionTreeEngine, the Tree implementation and the DiscreteSwaption
to extend this already Branestawm-ish contraption.
3.  Adjustments to DiscreteSwaption to make this hobble along.
4.  Various other hacks to make compile artefacts go away.

--- a/QuantLib/QuantLib.vcxproj.filters
+++ b/QuantLib/QuantLib.vcxproj.filters
@@ -2630,7 +2630,7 @@
     </ClInclude>
     <ClInclude Include="ql\time\calendars\israel.hpp">
       <Filter>time\calendars</Filter>
-    </ClInclude>	
+    </ClInclude>
     <ClInclude Include="ql\time\calendars\italy.hpp">
       <Filter>time\calendars</Filter>
     </ClInclude>
@@ -3990,6 +3990,12 @@
     </ClInclude>
     <ClInclude Include="ql\instruments\futures.hpp">
       <Filter>instruments</Filter>
+    </ClInclude>
+    <ClInclude Include="ql\pricingengines\additionalresultcalculators.hpp">
+      <Filter>pricingengines</Filter>
+    </ClInclude>
+    <ClInclude Include="ql\pricingengines\treecumulativeprobabilitycalculator1d.hpp">
+      <Filter>pricingengines</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -5423,7 +5429,7 @@
     </ClCompile>
     <ClCompile Include="ql\time\calendars\israel.cpp">
       <Filter>time\calendars</Filter>
-    </ClCompile>	
+    </ClCompile>
     <ClCompile Include="ql\time\calendars\italy.cpp">
       <Filter>time\calendars</Filter>
     </ClCompile>
@@ -6427,6 +6433,12 @@
     </ClCompile>
     <ClCompile Include="ql\instruments\futures.cpp">
       <Filter>instruments</Filter>
+    </ClCompile>
+    <ClCompile Include="ql\pricingengines\additionalresultcalculators.cpp">
+      <Filter>pricingengines</Filter>
+    </ClCompile>
+    <ClCompile Include="ql\pricingengines\treecumulativeprobabilitycalculator1d.cpp">
+      <Filter>pricingengines</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
