--- a/QuantLib/QuantLib.vcxproj
+++ b/QuantLib/QuantLib.vcxproj
@@ -481,6 +481,8 @@
     </Bscmake>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="ql\pricingengines\additionalresultcalculators.hpp" />
+    <ClInclude Include="ql\pricingengines\treecumulativeprobabilitycalculator1d.hpp" />
     <ClInclude Include="ql\rebatedexercise.hpp" />
     <ClInclude Include="ql\experimental\finitedifferences\dynprogvppintrinsicvalueengine.hpp" />
     <ClInclude Include="ql\experimental\finitedifferences\fdextoujumpvanillaengine.hpp" />
@@ -1729,6 +1731,8 @@
     <ClInclude Include="ql\volatilitymodel.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ql\pricingengines\additionalresultcalculators.cpp" />
+    <ClCompile Include="ql\pricingengines\treecumulativeprobabilitycalculator1d.cpp" />
     <ClCompile Include="ql\rebatedexercise.cpp" />
     <ClInclude Include="ql\experimental\finitedifferences\all.hpp" />
     <ClCompile Include="ql\experimental\finitedifferences\dynprogvppintrinsicvalueengine.cpp" />
