--- a/QuantLib/QuantLib.vcxproj
+++ b/QuantLib/QuantLib.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug (static runtime)|Win32">
@@ -482,6 +482,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="ql\pricingengines\additionalresultcalculators.hpp" />
+    <ClInclude Include="ql\pricingengines\swap\discretizedcoterminalswapstrip.hpp" />
     <ClInclude Include="ql\pricingengines\treecumulativeprobabilitycalculator1d.hpp" />
     <ClInclude Include="ql\math\polynomialmathfunction.hpp" />
     <ClInclude Include="ql\math\pascaltriangle.hpp" />
@@ -783,7 +784,7 @@
     <ClInclude Include="ql\instruments\bonds\floatingratebond.hpp" />
     <ClInclude Include="ql\instruments\bonds\zerocouponbond.hpp" />
     <ClInclude Include="ql\math\all.hpp" />
-    <ClInclude Include="ql\math\abcdmathfunction.hpp" />	
+    <ClInclude Include="ql\math\abcdmathfunction.hpp" />
     <ClInclude Include="ql\math\array.hpp" />
     <ClInclude Include="ql\math\autocovariance.hpp" />
     <ClInclude Include="ql\math\bernsteinpolynomial.hpp" />
@@ -1737,6 +1738,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ql\pricingengines\additionalresultcalculators.cpp" />
+    <ClCompile Include="ql\pricingengines\swap\discretizedcoterminalswapstrip.cpp" />
     <ClCompile Include="ql\pricingengines\treecumulativeprobabilitycalculator1d.cpp" />
     <ClCompile Include="ql\math\polynomialmathfunction.cpp" />
     <ClCompile Include="ql\math\pascaltriangle.cpp" />
