--- a/QuantLib/QuantLib.vcxproj.filters
+++ b/QuantLib/QuantLib.vcxproj.filters
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="methods">
@@ -860,7 +860,7 @@
     </ClInclude>
     <ClInclude Include="ql\math\abcdmathfunction.hpp">
       <Filter>math</Filter>
-    </ClInclude>	
+    </ClInclude>
     <ClInclude Include="ql\math\array.hpp">
       <Filter>math</Filter>
     </ClInclude>
@@ -4012,6 +4012,9 @@
     <ClInclude Include="ql\models\shortrate\onefactormodels\markovfunctional.hpp">
       <Filter>models\shortrate\onefactormodels</Filter>
     </ClInclude>
+    <ClInclude Include="ql\pricingengines\swap\discretizedcoterminalswapstrip.hpp">
+      <Filter>pricingengines\swap</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ql\methods\montecarlo\brownianbridge.cpp">
@@ -4328,7 +4331,7 @@
     </ClCompile>
     <ClCompile Include="ql\math\abcdmathfunction.cpp">
       <Filter>math</Filter>
-    </ClCompile>	
+    </ClCompile>
     <ClCompile Include="ql\math\bernsteinpolynomial.cpp">
       <Filter>math</Filter>
     </ClCompile>
@@ -6469,6 +6472,9 @@
     </ClCompile>
     <ClCompile Include="ql\models\shortrate\onefactormodels\markovfunctional.cpp">
       <Filter>models\shortrate\onefactormodels</Filter>
+    </ClCompile>
+    <ClCompile Include="ql\pricingengines\swap\discretizedcoterminalswapstrip.cpp">
+      <Filter>pricingengines\swap</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
